<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="save">Salvar</string>
    <string name="title_required">Título é obrigatório</string>
    <string name="server_error">Não foi possível se conectar ao servidor</string>
    <string name="empty_list">Não existem tarefas cadastradas.\nClique no botão abaixo para cadastrar uma nova tarefa.</string>
    <string name="permission">Permissões</string>
    <string name="notification_permission_rationale">O aplicativo irá enviar notificações para você quando houver tarefas pendentes.</string>
    <string name="preferences">Configurações</string>
    <string name="daily_notification">Notificações Diárias</string>
    <string name="daily_notification_on">Você receberá notificações diárias do aplicativo</string>
    <string name="daily_notification_off">Você não receberá mais notificações diárias do aplicativo</string>
    <string name="mark_completed">Marcar como concluída</string>
    <string name="create_error">Não foi possível criar a tarefa</string>
    <string name="update_error">Não foi possível atualizar a tarefa</string>

    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Criar conta</string>
    <string name="empty_email">Preencha o e-mail</string>
    <string name="empty_password">Preencha a senha</string>
    <string name="account_created_fail">Não foi possível criar a conta</string>
    <string name="login_fail">Não foi possível fazer o login</string>

    <string name="date_format_preference">Formato da Data</string>
    <string name="date_format_extended_on">Exibindo data por extenso (ex: 01 de janeiro)</string>
    <string name="date_format_extended_off">Exibindo data numérica (ex: 01/01/2025)</string>

    <string name="delete_title">Excluir Tarefa</string>
    <string name="delete_message">Tem certeza que deseja excluir esta tarefa?</string>

    <string name="login_guest">Entrar como convidado</string>
    <string name="login_guest_failure">Falha ao entrar como convidado.</string>


"
</resources>