<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/permission">
        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Interface">
        <SwitchPreferenceCompat
            android:key="date_format_extended"
            android:defaultValue="false"
            android:title="@string/date_format_preference"
            android:summaryOn="@string/date_format_extended_on"
            android:summaryOff="@string/date_format_extended_off" />
    </PreferenceCategory>

</PreferenceScreen>